tests/spec/emit/snapshots/alias_over_array_map_key_renders_comparable_bound.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  type Key<T> = Array<T, 2>
  
  fn f<T>(m: Map<Key<T>, int>) -> int {
    m.length()
  }
---
package main

type Key[T any] = [2]T

func f[T comparable](m map[Key[T]]int) int {
	return len(m)
}
