tests/spec/emit/snapshots/array_as_slice_copies_into_new_slice.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn to_slice(a: Array<int, 3>) -> Slice<int> {
    a.as_slice()
  }
---
package main

import "slices"

func to_slice(a [3]int) []int {
	return slices.Clone(a[:])
}
