tests/spec/emit/snapshots/array_element_assignment.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn overwrite(a: Array<int, 3>) -> Array<int, 3> {
    let mut b = a
    b[0] = 9
    b
  }
---
package main

func overwrite(a [3]int) [3]int {
	b := a
	b[0] = 9
	return b
}
