tests/spec/emit/snapshots/array_element_assignment_through_ref.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn bump(a: Ref<Array<int, 3>>) {
    a.*[0] = 9
  }
---
package main

func bump(a *[3]int) {
	(*a)[0] = 9
}
