tests/spec/emit/snapshots/array_get_map_value_receiver_hoists.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn at(m: Map<string, Array<int, 3>>, i: int) -> Option<int> {
    m["k"].get(i)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func at(m map[string][3]int, i int) (int, bool) {
	arr_1 := m["k"]
	v_2 := lisette.SliceGet(arr_1[:], i)
	if v_2.Tag == lisette.OptionSome {
		return v_2.SomeVal, true
	}
	return 0, false
}
